# Vision_Project

./: .gitignore  Demo.ipynb  Ideas.md  Readme.md  demo.py  keying.py  process_mask.py  projection.py  time_avg.sh
c++/: CMakeLists.txt  README.md
c++/include/: helper.h  keying.h  projection.h
c++/src/: demo.cpp  helper.cpp  keying.cpp  projection.cpp
demo_video/: fight_mask.txt  shashank_mask.txt
keying/: Keying.ipynb  Paper Keying Methods.ipynb  Projection.ipynb
keying/processed_vid/test_vid/: video.avi
presentation/: lec_customize.tex  mydef.sty  presentation.bib  presentation.tex
projection/: Projection.ipynb
